--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -118,7 +118,7 @@ jobs:
               "sudo -u appuser -H bash -lc \"docker pull ${IMAGE_URI}\"",
               "sudo -u appuser -H bash -lc \"docker stop website || true\"",
               "sudo -u appuser -H bash -lc \"docker rm website || true\"",
-              "sudo -u appuser -H bash -lc \"docker run -d --name website --restart unless-stopped -p 3000:3000 ${IMAGE_URI}\""
+              "sudo -u appuser -H bash -lc \"docker run -d --name website --env-file /opt/roommitra/website/.env --restart unless-stopped -p 3000:3000 ${IMAGE_URI}\""
             ],
             "executionTimeout": ["3600"]
           }
