--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -84,6 +84,9 @@ jobs:
           file: ./webapp/Dockerfile
           push: true
           provenance: false
+          build-args: |
+            NODE_ENV=production
+            REACT_APP_API_ENDPOINT=https://api.roommitra.com
           tags: |
             public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:${{ env.IMAGE_TAG }}
             public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:latest
