--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'api/**'
       - '.github/workflows/deploy-api.yml'
+      - 'api/Dockerfile'
 
 permissions:
   id-token: write
