--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'website/**'
       - '.github/workflows/deploy-website.yml'
+      - 'website/Dockerfile'
 
 permissions:
   id-token: write
