--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'webapp/**'
       - '.github/workflows/deploy-webapp.yml'
+      - 'webapp/Dockerfile'
 
 permissions:
   id-token: write
@@ -84,6 +85,9 @@ jobs:
           file: ./webapp/Dockerfile
           push: true
           provenance: false
+          build-args: |
+            NODE_ENV=production
+            REACT_APP_API_ENDPOINT=https://api.roommitra.com
           tags: |
             public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:${{ env.IMAGE_TAG }}
             public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:latest
