--- a/website/package.json
+++ b/website/package.json
@@ -2,6 +2,7 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
@@ -9,6 +10,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
+    "gray-matter": "^4.0.3",
+    "marked": "^16.4.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
