--- a/webapp2/tsconfig.json
+++ b/webapp2/tsconfig.json
@@ -27,11 +27,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/(app)/requests/active/page.jsx",
-    "src/app/layout.jsx",
-    "src/components/Auth/SigninWithPassword.jsx",
-    "src/app/(public)/sign-up/sign-up-form.jsx",
-    "src/components/Layouts/header/user-info/index.jsx"
+    "src"
   ],
   "exclude": ["node_modules"]
 }
