--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,7 @@
     "#repositories/*": "./repositories/*",
     "#config/*": "./config/*",
     "#Constants/*": "./Constants/*",
-    "#libs/*": "./libs/*"
+    "#libs/*": "./libs/*",
+    "#common/*": "./common/*"
   }
 }
