--- a/webapp2/package.json
+++ b/webapp2/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jsvectormap": "^1.6.0",
     "next": "15.1.6",
