--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - chai/test-website-metadata
     paths:
       - 'website/**'
       - '.github/workflows/deploy-website.yml'
