--- a/webapp2/package.json
+++ b/webapp2/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
+    "jsonwebtoken": "^9.0.2",
     "jsvectormap": "^1.6.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
@@ -22,6 +23,7 @@
     "react": "19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.0.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
