--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -1,49 +1,46 @@
-# 1) deps
-FROM node:20-alpine AS deps
-WORKDIR /app
-RUN apk add --no-cache libc6-compat
-COPY package.json package-lock.json* ./
-RUN npm ci
-
-# 2) build
+# ---------- Builder ----------
 FROM node:20-alpine AS builder
 WORKDIR /app
 ENV NEXT_TELEMETRY_DISABLED=1
 
+# native compat for some deps
+RUN apk add --no-cache libc6-compat
+
+# Install ALL deps, including dev, for build tools like tailwind/postcss
+COPY package.json package-lock.json* ./
+RUN npm ci --include=dev
+
+# Public envs for Next to bake into the build
 ARG NEXT_PUBLIC_API_BASE_URL
 ARG NEXT_PUBLIC_SITE_URL
-
 ENV NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL
 ENV NEXT_PUBLIC_SITE_URL=$NEXT_PUBLIC_SITE_URL
 
-COPY --from=deps /app/node_modules ./node_modules
+# Build
 COPY . .
 RUN npm run build
 
-# 3) production deps only
-FROM node:20-alpine AS prod-deps
-WORKDIR /app
-COPY package.json package-lock.json* ./
-RUN npm ci --omit=dev
+# keep the image smaller and avoid copying cache forward
+RUN rm -rf .next/cache
 
-# 4) runtime
+# ---------- Runtime ----------
 FROM node:20-alpine AS runner
 WORKDIR /app
 ENV NODE_ENV=production
 ENV NEXT_TELEMETRY_DISABLED=1
+
+# non-root user
 RUN addgroup -g 1001 -S nodejs && adduser -S nextjs -u 1001
 
-# copy production node_modules and app artifacts
-COPY --from=prod-deps /app/node_modules ./node_modules
-COPY --from=builder   /app/public       ./public
-COPY --from=builder   /app/.next        ./.next
-COPY --from=builder   /app/next.config.mjs ./
-COPY --from=builder   /app/package.json   ./
+# copy only what the server needs
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
 
-# make cache writable by the non-root user
-RUN mkdir -p /app/.next/cache/images && chown -R nextjs:nodejs /app
+# fix cache permissions
+RUN mkdir -p /app/.next/cache && chown -R nextjs:nodejs /app
 
 USER nextjs
 EXPOSE 3000
 ENV PORT=3000
-CMD ["npx", "next", "start", "-p", "3000"]
+CMD ["node", "server.js"]
