--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@ EC2/node_modules/
 EC2/.env*
 EC2/config/*.pem
 webapp/node_modules/
+api/node_modules/*
+api/.env*
+api/config/*.pem
+
+
 
 # Node
 node_modules/
