get active booking for room

--- a/api/jsconfig.json
+++ b/api/jsconfig.json
@@ -9,7 +9,8 @@
       "#config/*": ["./config/*"],
       "#Constants/*": ["./Constants/*"],
       "#libs/*": ["libs/*"],
-      "#common/*": ["common/*"]
+      "#common/*": ["common/*"],
+      "#presenters/*": ["presenters/*"]
     }
   }
 }
