--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "#config/*": "./config/*",
     "#Constants/*": "./Constants/*",
     "#libs/*": "./libs/*",
-    "#common/*": "./common/*"
+    "#common/*": "./common/*",
+    "#presenters/*": "./presenters/*"
   }
 }
