--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -31,7 +32,7 @@
     "#routes/*": "./routes/*",
     "#middleware/*": "./middleware/*",
     "#repositories/*": "./repositories/*",
-    "#config/*": "./config/*",
+    "#clients/*": "./clients/*",
     "#Constants/*": "./Constants/*",
     "#libs/*": "./libs/*",
     "#common/*": "./common/*",
