--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.7",
+    "openai": "^6.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "sync-request": "6.1.0",
