deploy webapp stage on main

--- a/.github/workflows/deploy-webapp-stage.yml
+++ b/.github/workflows/deploy-webapp-stage.yml
@@ -3,7 +3,7 @@ name: Deploy webapp-stage
 on:
   push:
     branches:
-      - release
+      - main
     paths:
       - 'webapp/**'
       - '.github/workflows/deploy-webapp-stage.yml'
