docker prune containers

--- a/.github/workflows/deploy-webapp-stage.yml
+++ b/.github/workflows/deploy-webapp-stage.yml
@@ -121,6 +121,7 @@ jobs:
               "sudo -u appuser -H bash -lc \"docker stop webapp-stage || true\"",
               "sudo -u appuser -H bash -lc \"docker rm webapp-stage || true\"",
               "sudo -u appuser -H bash -lc \"docker run -d --name webapp-stage -e PORT=3003 --env-file /opt/roommitra/webapp-stage/.env --restart unless-stopped -p 3003:3003 --log-driver=awslogs --log-opt awslogs-region=ap-south-1 --log-opt awslogs-group=/roommitra/containers --log-opt awslogs-stream=webapp-stage ${IMAGE_URI}\"",
+              "sudo -u appuser -H bash -lc \"docker container prune -f\"",
               "sudo -u appuser -H bash -lc \"docker system prune -af --volumes\"",
               "sudo -u appuser -H bash -lc \"docker builder prune -af\""
             ],
