--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.7",
     "openai": "^6.7.0",
     "swagger-jsdoc": "^6.2.8",
@@ -37,6 +38,7 @@
     "#Constants/*": "./Constants/*",
     "#libs/*": "./libs/*",
     "#common/*": "./common/*",
-    "#presenters/*": "./presenters/*"
+    "#presenters/*": "./presenters/*",
+    "#tasks/*": "./tasks/*"
   }
 }
