--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
+    "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "jsvectormap": "^1.6.0",
     "next": "15.1.6",
