--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "jsvectormap": "^1.6.0",
+    "luxon": "^3.7.2",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
