--- a/.github/workflows/deploy-webapp-stage.yml
+++ b/.github/workflows/deploy-webapp-stage.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - adi/pwa
     paths:
       - 'webapp/**'
       - '.github/workflows/deploy-webapp-stage.yml'
