--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,7 @@
     "jsvectormap": "^1.6.0",
     "luxon": "^3.7.2",
     "next": "15.1.6",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "react": "19.0.0",
