--- a/webapp/.gitignore
+++ b/webapp/.gitignore
@@ -34,3 +34,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# service workers : next-pwa generated files
+public/sw.js
+public/workbox-*.js
+public/service-worker.js
