--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "firebase-admin": "^13.6.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.7.2",
     "morgan": "^1.10.1",
