--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "firebase": "^12.6.0",
     "flatpickr": "^4.6.13",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
