--- a/website/package.json
+++ b/website/package.json
@@ -10,12 +10,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/typography": "^0.5.19",
     "gray-matter": "^4.0.3",
     "marked": "^16.4.0",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@next/font": "13.1.6",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
+    "framer-motion": "^9.0.3",
+    "next": "^16.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -24,6 +29,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "@babel/core": "^7.28.5",
+    "@babel/eslint-parser": "^7.28.5"
   }
 }
