--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.936.0",
     "@aws-sdk/client-ses": "^3.934.0",
+    "@aws-sdk/lib-dynamodb": "^3.936.0",
     "@slack/web-api": "^7.12.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.10.0",
@@ -42,6 +44,7 @@
     "#libs/*": "./libs/*",
     "#common/*": "./common/*",
     "#presenters/*": "./presenters/*",
-    "#tasks/*": "./tasks/*"
+    "#tasks/*": "./tasks/*",
+    "#config/*": "./config/*"
   }
 }
