--- a/api/package.json
+++ b/api/package.json
@@ -32,7 +32,10 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "sync-request": "6.1.0",
-    "ulid": "^3.0.1"
+    "ulid": "^3.0.1",
+    "@google-cloud/speech": "^5.3.0",
+    "@google-cloud/text-to-speech": "^5.1.0",
+    "ws": "^8.16.0"
   },
   "imports": {
     "#services/*": "./services/*",
