--- a/website/package.json
+++ b/website/package.json
@@ -13,17 +13,19 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@next/font": "13.1.6",
+    "@ricky0123/vad-web": "^0.0.29",
     "@tailwindcss/typography": "^0.5.19",
+    "clsx": "^2.1.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.3",
     "gray-matter": "^4.0.3",
     "marked": "^16.4.0",
     "next": "^16.0.3",
+    "onnxruntime-web": "^1.23.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^2.6.0",
-    "clsx": "^2.1.1"
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
