--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -88,6 +88,7 @@ jobs:
           build-args: |
             NODE_ENV=production
             NEXT_PUBLIC_SITE_URL=https://roommitra.com
+            NEXT_PUBLIC_SOCKET_IO_URL=wss://api.roommitra.com
           tags: |
             public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:${{ env.IMAGE_TAG }}
             public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:latest
