--- a/.github/workflows/deploy-website-stage.yml
+++ b/.github/workflows/deploy-website-stage.yml
@@ -1,12 +1,12 @@
-name: Deploy Website
+name: Deploy Website-stage
 
 on:
   push:
     branches:
-      - release
+      - main
     paths:
       - 'website/**'
-      - '.github/workflows/deploy-website.yml'
+      - '.github/workflows/deploy-website-stage.yml'
       - 'website/Dockerfile'
 
 permissions:
@@ -50,7 +50,7 @@ jobs:
               "blocks": [
                 { "type": "section",
                   "text": { "type": "mrkdwn",
-                    "text": ":alarm_clock: *PROD 🟣 `website` Build started* for <${{ env.COMMIT_URL }}|${{ env.SHORT_SHA }}>"
+                    "text": ":alarm_clock: *STAGE 🟠 `website` Build started* for <${{ env.COMMIT_URL }}|${{ env.SHORT_SHA }}>"
                   }
                 },
                 { "type": "context", "elements": [
@@ -87,11 +87,10 @@ jobs:
           provenance: false
           build-args: |
             NODE_ENV=production
-            NEXT_PUBLIC_SITE_URL=https://roommitra.com
-            NEXT_PUBLIC_SOCKET_IO_URL=wss://api.roommitra.com
+            NEXT_PUBLIC_SITE_URL=https://stage.roommitra.com
+            NEXT_PUBLIC_SOCKET_IO_URL=wss://api-stage.roommitra.com
           tags: |
             public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:${{ env.IMAGE_TAG }}
-            public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:latest
           cache-from: |
             type=gha
             type=registry,ref=public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:buildcache
@@ -116,12 +115,12 @@ jobs:
           {
             "commands": [
               "set -euo pipefail",
-              "sudo -u appuser -H bash -lc \"aws ssm get-parameter --name '/roommitra/website/env' --with-decryption --query 'Parameter.Value' --output text > /opt/roommitra/website/.env\"",
-              "sudo -u appuser -H bash -lc \"chmod 600 /opt/roommitra/website/.env\"",
+              "sudo -u appuser -H bash -lc \"aws ssm get-parameter --name '/roommitra/website-stage/env' --with-decryption --query 'Parameter.Value' --output text > /opt/roommitra/website-stage/.env\"",
+              "sudo -u appuser -H bash -lc \"chmod 600 /opt/roommitra/website-stage/.env\"",
               "sudo -u appuser -H bash -lc \"docker pull ${IMAGE_URI}\"",
-              "sudo -u appuser -H bash -lc \"docker stop website || true\"",
-              "sudo -u appuser -H bash -lc \"docker rm website || true\"",
-              "sudo -u appuser -H bash -lc \"docker run -d --name website --env-file /opt/roommitra/website/.env --restart unless-stopped -p 3000:3000 --log-driver=awslogs --log-opt awslogs-region=ap-south-1 --log-opt awslogs-group=/roommitra/containers --log-opt awslogs-stream=website ${IMAGE_URI}\"",
+              "sudo -u appuser -H bash -lc \"docker stop website-stage || true\"",
+              "sudo -u appuser -H bash -lc \"docker rm website-stage || true\"",
+              "sudo -u appuser -H bash -lc \"docker run -d --name website-stage --env-file /opt/roommitra/website-stage/.env --restart unless-stopped -p 3002:3002 --log-driver=awslogs --log-opt awslogs-region=ap-south-1 --log-opt awslogs-group=/roommitra/containers --log-opt awslogs-stream=website-stage ${IMAGE_URI}\"",
               "sudo -u appuser -H bash -lc \"docker container prune -f\"",
               "sudo -u appuser -H bash -lc \"docker system prune -af --volumes\"",
               "sudo -u appuser -H bash -lc \"docker builder prune -af\""
@@ -138,7 +137,7 @@ jobs:
             --region ${{ env.AWS_REGION }} \
             --instance-ids "${{ steps.find.outputs.instance_id }}" \
             --document-name "AWS-RunShellScript" \
-            --comment "Deploy website ${{ github.sha }}" \
+            --comment "Deploy website-stage ${{ github.sha }}" \
             --parameters file:///tmp/ssm-params.json
 
       # Success message
@@ -151,7 +150,7 @@ jobs:
               "blocks": [
                 { "type": "section",
                   "text": { "type": "mrkdwn",
-                    "text": ":white_check_mark: *PROD 🟣 `website` Build passed* for <${{ env.COMMIT_URL }}|${{ env.SHORT_SHA }}>"
+                    "text": ":white_check_mark: *STAGE 🟠 `website` Build passed* for <${{ env.COMMIT_URL }}|${{ env.SHORT_SHA }}>"
                   }
                 },
                 { "type": "context", "elements": [
@@ -174,7 +173,7 @@ jobs:
               "blocks": [
                 { "type": "section",
                   "text": { "type": "mrkdwn",
-                    "text": ":x: *PROD 🟣 `website` Build failed* for <${{ env.COMMIT_URL }}|${{ env.SHORT_SHA }}>"
+                    "text": ":x: *STAGE 🟠 `website` Build failed* for <${{ env.COMMIT_URL }}|${{ env.SHORT_SHA }}>"
                   }
                 },
                 { "type": "context", "elements": [
