--- a/.github/workflows/deploy-api-stage.yml
+++ b/.github/workflows/deploy-api-stage.yml
@@ -1,6 +1,12 @@
 name: Deploy api-stage
 
 on:
+  workflow_dispatch:
+    inputs:
+      commit_sha:
+        description: 'Commit SHA to run the workflow on'
+        required: true
+        type: string
   push:
     branches:
       - main
