--- a/.github/workflows/deploy-api-stage.yml
+++ b/.github/workflows/deploy-api-stage.yml
@@ -7,6 +7,7 @@ on:
         description: 'Commit SHA to run the workflow on'
         required: true
         type: string
+
   push:
     branches:
       - main
@@ -94,6 +95,7 @@ jobs:
           provenance: false
           tags: |
             public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:${{ env.IMAGE_TAG }}
+            public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:stage
           cache-from: |
             type=gha
             type=registry,ref=public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:buildcache
