--- a/.github/workflows/deploy-website-stage.yml
+++ b/.github/workflows/deploy-website-stage.yml
@@ -7,6 +7,7 @@ on:
         description: 'Commit SHA to run the workflow on'
         required: true
         type: string
+
   push:
     branches:
       - main
@@ -97,6 +98,7 @@ jobs:
             NEXT_PUBLIC_SOCKET_IO_URL=wss://api-stage.roommitra.com
           tags: |
             public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:${{ env.IMAGE_TAG }}
+            public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:stage
           cache-from: |
             type=gha
             type=registry,ref=public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:buildcache
