--- a/.github/workflows/deploy-website-stage.yml
+++ b/.github/workflows/deploy-website-stage.yml
@@ -128,7 +128,7 @@ jobs:
               "sudo -u appuser -H bash -lc \"docker pull ${IMAGE_URI}\"",
               "sudo -u appuser -H bash -lc \"docker stop website-stage || true\"",
               "sudo -u appuser -H bash -lc \"docker rm website-stage || true\"",
-              "sudo -u appuser -H bash -lc \"docker run -d --name website-stage --env-file /opt/roommitra/website-stage/.env --restart unless-stopped -p 3002:3002 --log-driver=awslogs --log-opt awslogs-region=ap-south-1 --log-opt awslogs-group=/roommitra/containers --log-opt awslogs-stream=website-stage ${IMAGE_URI}\"",
+              "sudo -u appuser -H bash -lc \"docker run -d --name website-stage -e PORT=3002 --env-file /opt/roommitra/website-stage/.env --restart unless-stopped -p 127.0.0.1:3002:3002 --log-driver=awslogs --log-opt awslogs-region=ap-south-1 --log-opt awslogs-group=/roommitra/containers --log-opt awslogs-stream=website-stage ${IMAGE_URI}\"",
               "sudo -u appuser -H bash -lc \"docker container prune -f\"",
               "sudo -u appuser -H bash -lc \"docker system prune -af --volumes\"",
               "sudo -u appuser -H bash -lc \"docker builder prune -af\""
