--- a/widget/tsconfig.json
+++ b/widget/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts"
+    "**/*.mts",
+    "src/lib/utils.js"
   ],
   "exclude": ["node_modules"]
 }
