--- a/.github/workflows/deploy-widget-stage.yml
+++ b/.github/workflows/deploy-widget-stage.yml
@@ -15,7 +15,7 @@ on:
       - 'widget/**'
       - '.github/workflows/deploy-widget-stage.yml'
       - 'widget/Dockerfile'
-      - 'chai/deploy-widget'
+      - chai/deploy-widget
 
 permissions:
   id-token: write
